--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "archiver": "^6.0.1",
     "core-js": "^3.6.4",
     "gameanalytics": "^4.2.3",
     "vue": "^2.6.11"
