--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@vue/cli-plugin-babel": "~4.2.0",
     "@vue/cli-service": "~4.2.0",
     "archiver": "^6.0.1",
-    "node-sass": "^6.0.1",
+    "sass": "^1.87.0",
     "sass-loader": "^10",
     "vue-template-compiler": "^2.6.11"
   },
